ready for submit

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <title>Restaurant Reviews</title>
 </head>
 
 <body>
+<div class="wrapper">
   <header>
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
@@ -16,16 +18,18 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
+    <section id="map-container" tabindex="-1" role="application">
       <div id="map"></div>
     </section>
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods"  onchange="updateRestaurants()"
+                aria-label="Dropdown menu:search by neighborhood">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()"
+                    aria-label="Dropdown menu:search by cuisine">
           <option value="all">All Cuisines</option>
         </select>
       </div>
@@ -41,7 +45,7 @@
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
-
+</div>
 </body>
 
 </html>
